packages/kit/test/apps/basics/src/routes/errors/endpoint-shadow-not-ok/+page.server.js
import { error } from '@tg-svelte/kit';

/** @type {import('@tg-svelte/kit').RequestHandler} */
export function load() {
	error(555, undefined);
}
